# cities-topic

./: Checkout.ipynb  CityLab.ipynb  Selenium.ipynb  Selenium_archdaily.ipynb  Selenium_ucl.ipynb  archdaily.ipynb  archpy-links.csv  arup_cities_perspectives.ipynb  arup_cities_perspectives_corpus.csv  bertopic.ipynb  citylab.py  ethz_research.csv  ethz_research.ipynb  links.csv  next-city-links.csv  pyproject.toml  requirements.txt  sane_links.csv  ucl-corpus.csv  ucl-links.csv  urbandesignforum_review_our-stories.ipynb  urbandesignforum_review_our-stories_corpus.csv  urbantheorylab.csv  urbantheorylab.ipynb
.ipynb_checkpoints/: bertopic-checkpoint.ipynb
