[tool.poetry]
name = "scraping_erik"
version = "0.1.0"
description = ""
authors = ["Álvaro Pata <helmanrm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
bs4 = "^0.0.1"
jupyter = "^1.0.0"
pandas = "^1.4.2"
selenium = "^4.1.3"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
